# ml-assignment-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
.github/workflows/: main.yml
data/: pca_matrix.txt  small_data.txt  small_labels.txt  training_data.txt  training_labels.txt  weights.json
data/reports/: unprocessed.txt
data/saved_nn/: test.nnw
data/submission/: network.nnw  testlabels.txt
data/training_specs/: all_network.toml  hidden_large.toml  hidden_small.toml  processed_main.toml  small_network.toml  unprocessed_data.toml
docs/: stats.md
include/: hyperparams.h  network.h  neuralnet.h  parser.h  preprocessing.h  spec.h
scripts/: PCA.py  c8e0b7c-6.nnw  classifyall.py  data_ops.py  data_vis.py  execute.py  network.py  preprocessing.py  stats.py
src/: hyperparams.cpp  main.cpp  network.cpp  neuralnet.cpp  parser.cpp  preprocessing.cpp  spec.cpp
